Update main.css: UI Fix for dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,3 +5,7 @@
 .text-dark{
     @apply text-gray-900 dark:text-gray-100
 }
+
+body {
+    @apply bg-slate-100 dark:bg-slate-950
+}
